--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -22,6 +22,7 @@ jobs:
         CONAN_USERNAME: "tereius",
         CONAN_CHANNEL: "stable",
         CONAN_REMOTES: "https://conan.privatehive.de/artifactory/api/conan/public-conan"
+        CONAN_BASE_PROFILE: "default"
       }
 
 - job: Upload
