--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -21,7 +21,7 @@ jobs:
       conanEnv: {
         CONAN_USERNAME: "tereius",
         CONAN_CHANNEL: "stable",
-        CONAN_REMOTES: "https://conan.privatehive.de/artifactory/api/conan/public-conan"
+        CONAN_REMOTES: "https://conan.privatehive.de/artifactory/api/conan/public-conan",
         CONAN_BASE_PROFILE: "default"
       }
 
